[package]
name = "ppapi"
version = "0.0.1"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
links = "helper"
build = "src/build.rs"
description = "Rust idiomatic bindings to parts of the Pepper API"
repository = "https://github.com/DiamondLovesYou/rust-ppapi.git"
documentation = "http://diamondlovesyou.github.io/rust-ppapi/docs/ppapi/index.html"
license = "LGPL-3"

[lib]
name = "ppapi"
path = "src/lib/lib.rs"

[features]
use-openssl = ["openssl", "old-http/ssl"]

[dependencies.old-http]
git = "https://github.com/DiamondLovesYou/rust-http.git"
default-features = false

[dependencies.openssl]
git = "https://github.com/DiamondLovesYou/rust-openssl.git"
branch = "nacl-crosses"
optional = true

[build-dependencies.pnacl-build-helper]
version = "*"
