[package]
name = "ppapi-tester"
version = "0.0.1"
authors = [ "Richard Diamond <wichard@vitalitystudios.com>" ]
repository = "https://github.com/DiamondLovesYou/rust-ppapi.git"
license = "MPL-2.0"
description = "Compiler plugin to run integration tests in Google Chrome, where Pepper is available."

[lib]
name = "ppapi-tester"
path = "lib.rs"
plugin = true
